# userspace-resource-manager

./: focused.slice  urm.service.in
.github/workflows/: pr.yml  qcom-preflight-checks.yml
configs/: InitConfig.yaml  PropertiesConfig.yaml  ResourcesConfig.yaml
contextual-classifier/: CMakeLists.txt  ContextualClassifier.cpp  ContextualClassifierInit.cpp  FeatureExtractor.cpp  FeaturePruner.cpp  MLInference.cpp  NetLinkComm.cpp
contextual-classifier/Configs/: classifier-blocklist.txt
contextual-classifier/Include/: ContextualClassifier.h  FeatureExtractor.h  FeaturePruner.h  Inference.h  MLInference.h
debian/: userspace-resource-manager.install
docs/: Doxyfile  README.md
extensions/Include/: Extensions.h
modula/: CMakeLists.txt
modula/Common/Include/: Utils.h
modula/Components/: DLManager.cpp  Logger.cpp
modula/Components/Include/: DLManager.h
modula/CoreModules/: AuxRoutines.cpp  UrmSettings.cpp
modula/CoreModules/Include/: AuxRoutines.h  UrmSettings.h
resource-tuner/: CMakeLists.txt
resource-tuner/core/: CocoTable.cpp  RequestHandler.cpp  ResourceHooks.cpp  ResourceRegistry.cpp  TargetRegistry.cpp
resource-tuner/core/Include/: RestuneInternal.h  TargetRegistry.h
resource-tuner/init/: RestuneInit.cpp  RestuneParser.cpp
tests/: CMakeLists.txt
tests/Component/: ClientDataManagerTests.cpp  CocoTableTests.cpp  ContextClassificationTest.cpp  DeviceInfoTests.cpp  ExtensionIntfTests.cpp  MemoryPoolTests.cpp  MiscTests.cpp  ParserTests.cpp  RateLimiterTests.cpp  RequestMapTests.cpp  RequestQueueTests.cpp  SafeOpsTests.cpp  ThreadPoolTests.cpp  TimerTests.cpp  Trigger.cpp
tests/Configs/: Baseline.yaml  PerApp.yaml  ResourcesConfig.yaml
tests/Integration/: CCIntegrationTest.cpp  CCIntegrationTests.cpp  IntegrationTests.cpp
tests/Utils/: Baseline.cpp  URMTests.cpp
tests/Utils/Include/: TestBaseline.h  TestUtils.h  URMTests.h
